--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   </h1>
 </div>
 
+<h4>Material toolbar</h4>
 <mat-toolbar>
   <mat-toolbar-row>
     <a target="_blank" href="https://material.angular.io/">Angular Material</a>
@@ -17,7 +18,7 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
-
+<h4> Flex Layout</h4>
 <div class="container" fxLayout="row" fxLayout.xs="column" fxLayoutWrap
   fxLayoutGap="0.5%" fxLayoutAlign="center">
   <div fxFlex="20%">
@@ -38,22 +39,22 @@
   </div>
 </div>
 
-<div class="container" fxLayout="row" fxLayout.xs="column" fxLayoutWrap
-  fxLayoutGap="0.5%" fxLayoutAlign="center">
-  <div fxFlex="20%">
-    <img mat-card-image class="img"
-      src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/8V46UZCS0V.jpg">
-  </div>
-  <div fxFlex="20%">
-    <img mat-card-image class="img"
-      src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/LTLE4QGRVQ.jpg">
-  </div>
-  <div fxFlex="20%">
-    <img mat-card-image class="img"
-      src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/R926LU1YEA.jpg">
-  </div>
-  <div fxFlex="20%">
-    <img mat-card-image class="img"
-      src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/U9PP3KXXY2.jpg">
-  </div>
+<br>
+<h4>Material + Flex Layout</h4>
+<mat-form-field class="search-form">
+  <input matInput type="text" placeholder="Search a picture">
+</mat-form-field>
+<button mat-raised-button button="submit" class="primary"></button>
+<br>
+
+<div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%"
+  fxLayoutAlign="center">
+  <mat-card class="card-picture" *ngFor="let picture of pictures">
+    <mat-card-title fxLayout.gt-xs="row" fxLayout.xs="column">
+      <span fxFlex="80%">{{picture.title}}</span>
+      <mat-icon fxFlex="10%">edit</mat-icon>
+      <mat-icon fxFlex="10%">delete</mat-icon>
+    </mat-card-title>
+    <img mat-card-image [src]="picture.img">
+  </mat-card>
 </div>
