--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,3 +11,12 @@
     min-height: 100%;
     width: 100%;
 }
+
+.card-picture {
+    width: 23%;
+    margin-bottom: 2%;
+}
+
+.search-form {
+    width: 90%;
+}
